[package]
name = "pos-based-fluids"
version = "0.1.0"
edition = "2021"


[dependencies]
winit = { version = "0.29.4" , features = ["rwh_05"]}
wgpu = "0.18"
# env_logger = "0.10"
log = "0.4"
pollster = "0.3"
bytemuck = { version = "1.12", features = [ "derive" ] }
# cgmath = "0.18.0"
glam = "0.25.0"
opencl3 = "0.9.4"
